[package]
name = "gameai-and-deeplearning"
version = "0.1.0"
edition = "2021"
default-run = "basic-dfs-mc"

[[bin]]
name = "basic-dfs-mc"
path = "src/bin/basic_dfs_mc.rs"

[[bin]]
name = "iter-deep-dfs-mc"
path = "src/bin/iter_deep_dfs_mc.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
